--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,11 @@
     <title>Wheel of Life</title>
   </head>
   <body>
+    <div class="video-container">
+      <video autoplay loop muted poster="http">
+        <source src="video1.mp4" type="video/mp4">
+      </video>
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
